--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-ide-helper": "^2.5",
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
+        "furqansiddiqui/erc20-php": "^0.1.2",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
     },
