--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "fideloper/proxy": "^4.0",
         "furqansiddiqui/erc20-php": "^0.1.2",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "sentry/sentry-laravel": "^0.11.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
