添加错误捕获

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "furqansiddiqui/erc20-php": "^0.1.2",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "sentry/sentry-laravel": "^0.11.0"
+        "sentry/sentry-laravel": "^1.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -63,5 +63,11 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://mirrors.aliyun.com/composer/"
+        }
+    }
 }
