--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# 节点地址
+RPC_HOST=http://localhost:8545
+# 静态文件 CDN 地址
+ASSETS_HOST=
+# sentry 上报地址
+SENTRY_DSN=
+# 捐赠地址
+DONATE_ADDRESS=
