--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
         "furqansiddiqui/erc20-php": "^0.1.2",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
+        "laravel/framework": "^8.0",
+        "laravel/tinker": "^2.0",
         "predis/predis": "^1.1",
         "sentry/sentry-laravel": "^1.2"
     },
@@ -21,8 +21,8 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "files": [
